zSugar was renamed to bSugar to match bTactic branding

--- a/com_irontec_zsugar.properties
+++ b/com_irontec_zsugar.properties
@@ -1,5 +1,5 @@
 # zSugar zimlet properties
-zsugar_title = zsugar: Zimbra-SugarCRM Integration
+zsugar_title = bsugar: Zimbra-SugarCRM Integration
 zsugar_tooltip = SugarCRM Integration Zimlet 
 zsugar_powered = http://www.irontec.com
 
@@ -33,7 +33,7 @@ zsugar_notconnected = Not authenticated in SugarCRM
 zsugar_connected = Your session is authenticated.
 
 
-zsugar_aboutText_pre = <p class='big center'>zSugar&nbsp;
+zsugar_aboutText_pre = <p class='big center'>bSugar&nbsp;
 zsugar_aboutText_post = </p><p class='med center'>Sugar CRM Integration Zimlet</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
 
 
