bTactic branding. Pending: Actual bTactic images.

--- a/com_irontec_zsugar.properties
+++ b/com_irontec_zsugar.properties
@@ -1,7 +1,7 @@
 # zSugar zimlet properties
 zsugar_title = bsugar: Zimbra-SugarCRM Integration
 zsugar_tooltip = SugarCRM Integration Zimlet 
-zsugar_powered = http://www.irontec.com
+zsugar_powered = http://www.btactic.com
 
 zsugar_username = Username
 zsugar_pass = Password
@@ -34,7 +34,7 @@ zsugar_connected = Your session is authenticated.
 
 
 zsugar_aboutText_pre = <p class='big center'>bSugar&nbsp;
-zsugar_aboutText_post = </p><p class='med center'>Sugar CRM Integration Zimlet</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
+zsugar_aboutText_post = </p><p class='med center'>Sugar CRM Integration Zimlet</p><p id='zsugar_blogo'>Copyright 2014 BTACTIC, SCCL<br /><a href='http://www.btactic.com'>http://www.btactic.com</a></p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
 
 
 zsugar_errorInsertingEmail = An error has occurried while saving email.
