--- a/com_irontec_zsugar.properties
+++ b/com_irontec_zsugar.properties
@@ -67,3 +67,33 @@ zsugar_lead_assigned = Assign created Lead to my user
 zsugar_leadError = Error creating new Lead
 zsugar_leadCreated = New Lead successfully created
 zsugar_enter_filter = Enter filter text here...
+
+zsugar_createOpportunity = Create Opportunity
+zsugar_Opportunity_assigned = Assign created Opportunity to my user
+zsugar_OpportunityCreated = New Opportunity successfully created
+zsugar_OpportunityError = Error creating new Opportunity
+zsugar_Opportunity_name = Opportunity name
+zsugar_Opportunity_account = Opportunity account
+zsugar_Opportunity_date = Opportunity date
+zsugar_Opportunity_amount = Opportunity amount
+zsugar_Opportunity_stage = Opportunity stage
+
+zsugar_createCase = Create Case
+zsugar_Case_assigned = Assign created Case to my user
+zsugar_CaseCreated = New Case successfully created
+zsugar_CaseError = Error creating new Case
+zsugar_Case_name = Case name
+zsugar_Case_account = Case account
+zsugar_Case_subject = Case subject
+zsugar_Case_description = Case description
+zsugar_Case_resolution = Case resolution
+
+zsugar_createContact = Create Contact
+zsugar_contact_assigned = Assign created Contact to my user
+zsugar_contactCreated = New Contact successfully created
+zsugar_contactError = Error creating new Contact
+zsugar_contact_firstname = First Name
+zsugar_contact_lastname = Contact last name
+zsugar_contact_email = Contact name
+zsugar_contact_account = Contact account
+zsugar_contact_desc = Contact description
