SugarCRM references were renamed to SuiteCRM.

--- a/com_irontec_zsugar.properties
+++ b/com_irontec_zsugar.properties
@@ -1,13 +1,13 @@
 # zSugar zimlet properties
 zsugar_name = zsugar
-zsugar_title = zsugar: Zimbra-SugarCRM Integration
+zsugar_title = zsugar: Zimbra-SuiteCRM Integration
 zsugar_version = 1.5.0
-zsugar_tooltip = SugarCRM Integration Zimlet 
+zsugar_tooltip = SuiteCRM Integration Zimlet
 zsugar_powered = http://www.irontec.com
 
 zsugar_username = Username
 zsugar_pass = Password
-zsugar_url = SugarCRM URL 
+zsugar_url = SuiteCRM URL
 zsugar_cleanpass = LDAP Authentication
 
 zsugar_seleccionaContacto = Choose a contact
@@ -31,7 +31,7 @@ zsugar_about = About
 zsugar_relogin = Force Authentication
 zsugar_status = Status
 
-zsugar_notconnected = Not authenticated in SugarCRM
+zsugar_notconnected = Not authenticated in SuiteCRM
 zsugar_connected = Your session is authenticated.
 
 
@@ -42,8 +42,8 @@ zsugar_errorAttachingFile = An error has occurried while saving attachment.
 zsugar_unexpected_error = An unexpected error has occurried.
 
 zsugar_emailsaved = Email saved successfully.
-zsugar_bn_addSugar = Send to SugarCRM
-zsugar_bn_addSugar_tooltip = Sends selected mail to SugarCRM
+zsugar_bn_addSugar = Send to SuiteCRM
+zsugar_bn_addSugar_tooltip = Sends selected mail to SuiteCRM
 
 zsugar_att_processing = Processing attachment...
 zsugar_att_done = Attachment Processed
