--- a/com_irontec_zsugar.properties
+++ b/com_irontec_zsugar.properties
@@ -1,4 +1,4 @@
-# zSugar zimlet properties
+# zSuitecrm zimlet properties
 zsugar_name = zsugar
 zsugar_title = zsugar: Zimbra-SuiteCRM Integration
 zsugar_version = 1.5.0
@@ -35,7 +35,7 @@ zsugar_notconnected = Not authenticated in SuiteCRM
 zsugar_connected = Your session is authenticated.
 
 
-zsugar_aboutText = <p class='big center'>zSugar 1.4.16</p><p class='med center'>Sugar CRM Integration Zimlet</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
+zsugar_aboutText = <p class='big center'>zSuitecrm 1.4.16</p><p class='med center'>Sugar CRM Integration Zimlet</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
 
 zsugar_errorInsertingEmail = An error has occurried while saving email.
 zsugar_errorAttachingFile = An error has occurried while saving attachment.
