Last zsugar references were renamed to zSuitecrm.

--- a/com_irontec_zsugar/com_irontec_zsugar.properties
+++ b/com_irontec_zsugar/com_irontec_zsugar.properties
@@ -1,6 +1,6 @@
 # zSuitecrm zimlet properties
-zsugar_name = zsugar
-zsugar_title = zsugar: Zimbra-SuiteCRM Integration
+zsugar_name = zSuitecrm
+zsugar_title = zSuitecrm: Zimbra-SuiteCRM Integration
 zsugar_version = @@VERSION@@
 zsugar_tooltip = SuiteCRM Integration Zimlet
 zsugar_powered = http://www.irontec.com
