Common Powered by link.

--- a/com_irontec_zsugar/com_irontec_zsugar.properties
+++ b/com_irontec_zsugar/com_irontec_zsugar.properties
@@ -3,7 +3,7 @@ zsugar_name = zSuitecrm
 zsugar_title = zSuitecrm: Zimbra-SuiteCRM Integration
 zsugar_version = @@VERSION@@
 zsugar_tooltip = SuiteCRM Integration Zimlet
-zsugar_powered = http://www.irontec.com
+zsugar_powered = @@POWERED_LINK@@
 
 zsugar_username = Username
 zsugar_pass = Password
